kubernetes/bgd.svc.nodeport.yml
apiVersion: v1
kind: Service
metadata:
 name: bgd
spec:
 ports:
 - nodePort: 30888
   port: 8080
   protocol: TCP
   targetPort: 8080
 selector:
   app: bgd
 type: NodePort
