kubernetes/bgd.svc.yml
apiVersion: v1
kind: Service
metadata:
 name: bgd
spec:
 ports:
 - port: 8080
   protocol: TCP
   targetPort: 8080
 selector:
   app: bgd
 type: ClusterIP
