kubernetes/bgd.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: bgd
spec:
 rules:
 - host: foo.bar.com
   http:
     paths:
     - pathType: Prefix
       path: "/"
       backend:
         service:
           name: bgd
           port:
             number: 8080
