kubernetes/bgd.rollout.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bgd
  name: bgd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgd
  strategy: {}
  # strategy:
  #   type: Recreate
  ####
  # strategy:
  #   type: RollingUpdate
  ####
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 0
  ###
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 0
  #     maxUnavailable: 20%
  ###
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bgd
    spec:
      containers:
      # - image: quay.io/redhatworkshops/bgd:latest
      # - image: seb54000/tpkube-biblioapi:broken
      - image: seb54000/bgd:latest
        name: bgd
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bgd
  name: bgd
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: bgd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: bgd
spec:
 rules:
 - host: vm00.tpcsonline.org
   http:
     paths:
     - pathType: Prefix
       path: "/"
       backend:
         service:
           name: bgd
           port:
             number: 8080
---
